cmake_minimum_required(VERSION 3.0.0)
project(NiryoOneManus VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 20)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

add_subdirectory(src/ros_replacements)
add_subdirectory(src/dynamixel_sdk)
add_subdirectory(src/mcp_can_rpi)
add_subdirectory(src/niryo_one_driver)
add_subdirectory(src/manus_interface)
add_subdirectory(src/test_stuff)
add_subdirectory(src/manus_node)
# include(src/ros_replacements/CMakeLists.txt)
# include(src/dynamixel_sdk/CMakeLists.txt)
# include(src/mcp_can_rpi/CMakeLists.txt)
# include(src/niryo_one_driver/CMakeLists.txt)
# include(src/manus_interface/CMakeLists.txt)
# include(src/test_stuff/CMakeLists.txt)